[gd_scene load_steps=3 format=3 uid="uid://cqixk8cpx1yh4"]

[ext_resource type="Script" path="res://MarkerMenu/MarkerListView.gd" id="1_5e8xm"]
[ext_resource type="Script" path="res://MarkerMenu/MarkerMenu.gd" id="1_spx4s"]

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -299.0
offset_right = -675.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("1_spx4s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SaveButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "save"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "load"

[node name="RemoveMarkerButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "remove last marker"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_5e8xm")

[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RemoveMarkerButton" to="." method="_on_remove_marker_button_pressed"]
